[tool.poetry]
name = "discord_bot"
version = "0.1.0"
description = ""
authors = ["Dima <sauberr10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.2"
requests = "^2.28.2"
datetime = "^5.1.0"
asyncio = "^3.4.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
